--- a/Cirno5/Web/package.json
+++ b/Cirno5/Web/package.json
@@ -25,10 +25,14 @@
   },
   "dependencies": {
     "@types/jest": "^19.2.3",
+    "@types/material-ui": "^0.17.22",
+    "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-test-renderer": "^15.5.0",
+    "material-ui": "^0.18.7",
+    "office-ui-fabric-react": "^4.32.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.2"
