--- a/Cirno5/Web/package.json
+++ b/Cirno5/Web/package.json
@@ -13,19 +13,22 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.5",
     "jest": "^20.0.3",
     "react-test-renderer": "^15.5.4",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "ts-jest": "^20.0.3",
     "tslint": "^5.2.0",
     "tslint-react": "^3.0.0",
     "typescript": "^2.3.2",
+    "typings-for-css-modules-loader": "^1.5.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "@types/jest": "^19.2.3",
-    "@types/material-ui": "^0.17.22",
+    "@types/material-ui": "^0.17.23",
     "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
