--- a/Cirno5/Web/package.json
+++ b/Cirno5/Web/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^15.5.0",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-test-renderer": "^15.5.0",
+    "axios": "^0.16.2",
     "material-ui": "^0.18.7",
     "office-ui-fabric-react": "^4.32.0",
     "react": "^15.5.4",
