--- a/Cirno5/Web/package.json
+++ b/Cirno5/Web/package.json
@@ -1,55 +1,36 @@
 {
-  "name": "cirno5-web-spa",
-  "version": "0.0.7",
-  "description": "",
+  "name": "cirno5",
+  "version": "1.0.0",
+  "description": "blog system",
   "main": "index.js",
   "scripts": {
-    "start": "node dev-server.js",
-    "lint": "tslint src/*.tsx src/**/*.tsx",
-    "test": "jest"
+    "server": "webpack-dev-server --open --config ./config/webpack.devbox.config.js",
+    "build": "set NODE_ENV=production && webpack --config ./webpack.prod.config.js --progress",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true,
+  "keywords": [
+    "cirno5"
+  ],
   "author": "plusplus7",
   "license": "MIT",
-  "devDependencies": {
-    "awesome-typescript-loader": "^3.1.3",
-    "css-loader": "^0.28.5",
-    "jest": "^20.0.3",
-    "react-test-renderer": "^15.5.4",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "ts-jest": "^20.0.3",
-    "tslint": "^5.2.0",
-    "tslint-react": "^3.0.0",
-    "typescript": "^2.3.2",
-    "typings-for-css-modules-loader": "^1.5.0",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
-  },
   "dependencies": {
-    "@types/jest": "^19.2.3",
-    "@types/material-ui": "^0.17.23",
-    "@types/prop-types": "^15.5.1",
-    "@types/react": "^15.0.24",
-    "@types/react-dom": "^15.5.0",
-    "@types/react-router-dom": "^4.0.7",
-    "@types/react-test-renderer": "^15.5.0",
-    "axios": "^0.16.2",
-    "material-ui": "^0.18.7",
-    "office-ui-fabric-react": "^4.32.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.2"
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ]
+  "devDependencies": {
+    "css-loader": "^0.28.7",
+    "react-dev-utils": "^4.2.1",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.1",
+    "ts-loader": "^3.2.0",
+    "tslint": "^5.8.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.6.2",
+    "typings-for-css-modules-loader": "^1.7.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   }
 }
