--- a/Cirno5/Web/tsconfig.json
+++ b/Cirno5/Web/tsconfig.json
@@ -1,18 +1,22 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "outDir": "public",
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react"
+        "lib": [
+            "es6", "dom"
+        ],
+        "sourceMap": true,
+        "allowJs": false,
+        "jsx": "react",
+        "moduleResolution": "node",
+        "rootDir": "./src",
     },
     "include": [
-        "./**/*"
+        "./src/**/*"
     ],
     "exclude": [
-      "node_modules"
+        "node_modules",
+        "public"
     ]
 }
