--- a/Cirno5/Web/package.json
+++ b/Cirno5/Web/package.json
@@ -15,10 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.0.31",
+    "@types/react-bootstrap": "^0.31.9",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "axios": "^0.17.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
